jvm tuning + removing gzip encoding from headers + scala update